New Curve interpolation in Color Management works as the old method unless it gets reset. #47366

Closed
opened 2016-02-08 22:23:51 +01:00 by Marco G · 12 comments

System Information
Win7 64bit Nvidia 750Ti 4Gb
system-info_276-hash-578f70f.txt

Blender Version
Broken: 2.76 578f70f

Short description of error
New Curve interpolation in Color Management needs to be reset to get it working with the new method.

Exact steps for others to reproduce the error
It's not file specific, it can be reproduced even on factory settings here, that's why i have no blends to attach.

Steps:

  • Load factory settings
  • Fresh new default file
  • Go to Color Management tab and tweak the curve by adding a point like the image attached
  • (Look how the curve behaviour is the old one)
  • Now Reset curve from the Tools
  • Tweak again the curve by adding a point
  • Now it is working as expected

ColorManagementCurve.jpg

**System Information** Win7 64bit Nvidia 750Ti 4Gb [system-info_276-hash-578f70f.txt](https://archive.blender.org/developer/F280991/system-info_276-hash-578f70f.txt) **Blender Version** Broken: 2.76 578f70f **Short description of error** New Curve interpolation in Color Management needs to be reset to get it working with the new method. **Exact steps for others to reproduce the error** It's not file specific, it can be reproduced even on factory settings here, that's why i have no blends to attach. Steps: - Load factory settings - Fresh new default file - Go to Color Management tab and tweak the curve by adding a point like the image attached - (Look how the curve behaviour is the old one) - Now Reset curve from the Tools - Tweak again the curve by adding a point - Now it is working as expected ![ColorManagementCurve.jpg](https://archive.blender.org/developer/F280994/ColorManagementCurve.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @marcog

Added subscriber: @marcog

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

That's because the points on each end of a new curve are now of the vector type by default (as opposed to the auto type they were before).

If you have an existing curve, change the point type for the ones at each end to 'vector'. You can do that by clicking the little blue wrench icon.

That's because the points on each end of a new curve are now of the *vector* type by default (as opposed to the *auto* type they were before). If you have an existing curve, change the point type for the ones at each end to 'vector'. You can do that by clicking the little blue wrench icon.

Added subscriber: @Sergey

Added subscriber: @Sergey

@marcog: I'm not sure what are the old and new methods? Can you explain that? And does this happen with facture Blender settings?

@Ace_Dragon, this i can not confirm. All the points are AUTO handle after the curve mapping is being enabled first time. So it's some operation which you do makes them VECTOR. Please give us exact steps you're doing to get point handle type from a factory startup.

@marcog: I'm not sure what are the old and new methods? Can you explain that? And does this happen with facture Blender settings? @Ace_Dragon, this i can not confirm. All the points are AUTO handle after the curve mapping is being enabled first time. So it's some operation which you do makes them VECTOR. Please give us exact steps you're doing to get point handle type from a factory startup.
Author

@Sergey , yes, as stated, this happens with factory settings too.
I can't find the commit but i remember (probably you?) that the behaviour of the curve mapping has been modified (now it's better btw, IMHO), there is an example here in this thread, now a single point give a sort of automatic S shape ---> link BA

The bug i report is because to get this "new" way about how curve interpolates, it does not work out of the box, the user MUST reset the curve manually (even on a fresh new file on factory settings), otherwhise it works as the "old" way.

Please look the far left and far right shape of the curve in the image I attached. The far left is how it worked before, the far right is how works now (improved). Try following the steps i wrote.
The fact the user needs to reset manually the curve is IMHO, a bug, should work out of the box instead.

@Ace_Dragon , the fact you need to reset or set to AUTO manually is the bug in my opinion.

@Sergey , yes, as stated, this happens with factory settings too. I can't find the commit but i remember (probably you?) that the behaviour of the curve mapping has been modified (now it's better btw, IMHO), there is an example here in this thread, now a single point give a sort of automatic S shape ---> [link BA ](http://www.blenderartists.org/forum/showthread.php?282540-Cycles-tonemapping&p=3005300&viewfull=1#post3005300) The bug i report is because to get this "new" way about how curve interpolates, it does not work out of the box, the user MUST reset the curve manually (even on a fresh new file on factory settings), otherwhise it works as the "old" way. Please look the **far left** and **far right** shape of the curve in the image I attached. The far left is how it worked before, the far right is how works now (improved). Try following the steps i wrote. The fact the user needs to reset manually the curve is IMHO, a bug, should work out of the box instead. @Ace_Dragon , the fact you need to reset or set to AUTO manually is *the bug* in my opinion.
Author

@Sergey , i think D1658 is the patch i was looking for to explain the "old" vs the "new" method, so the far left in the image I attached is before the patch, far right is after the patch has been committed. But(!), to get this new result, you need to reset the curve, it's not working automatically as soon as the user adds a point to the curve.

Hope it's clearer.

@Sergey , i think [D1658](https://archive.blender.org/developer/D1658) is the patch i was looking for to explain the "old" vs the "new" method, so the far left in the image I attached is *before* the patch, far right is *after* the patch has been committed. But(!), to get this new result, you need to reset the curve, it's not working automatically as soon as the user adds a point to the curve. Hope it's clearer.

This issue was referenced by 24e6411be6

This issue was referenced by 24e6411be6d0795d3107cc2d5dca8ae838e54663

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Just to clarify, there was never changes in interpolation or so. There was only a change for the shutter curve in 4f6b01ce1 which lead to all LINEAR curve preset to switch to a VECTOR handle. Official startup file has AUTO handles by default for the color mapping.

Now made it so Reset behaves same as in all previous releases for color management curve (and rest of single-slope curves actually). This conflicts with original report, but that's really how it used to work all the time and how it is expected to work.

Just to clarify, there was never changes in interpolation or so. There was only a change for the shutter curve in 4f6b01ce1 which lead to all LINEAR curve preset to switch to a VECTOR handle. Official startup file has AUTO handles by default for the color mapping. Now made it so Reset behaves same as in all previous releases for color management curve (and rest of single-slope curves actually). This conflicts with original report, but that's really how it used to work all the time and how it is expected to work.
Author

Ah, ok thanks for clarifying.

Ah, ok thanks for clarifying.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47366
No description provided.