Fix T47366: Single slope linear curve was wrongly using vector handle

Vector handle is only required for a symmetric curve to give nice a /\ shape.
Single slope curves better to use AUTO handle by default.